Bug 440041 - Sieve editor does not show the line numbers correctly
Summary: Sieve editor does not show the line numbers correctly
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: sieve (other bugs)
Version First Reported In: Git (master)
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-19 15:25 UTC by Dmitri Koulikoff
Modified: 2021-07-29 13:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments
KDE-Kmail-Sieve-editor_20210719_160919.png (160.38 KB, image/png)
2021-07-19 15:25 UTC, Dmitri Koulikoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitri Koulikoff 2021-07-19 15:25:15 UTC
Created attachment 140189 [details]
KDE-Kmail-Sieve-editor_20210719_160919.png

SUMMARY

The line numbers are left-cut


STEPS TO REPRODUCE
1. Open a long script file in the Sieve Editor

OBSERVED RESULT

 You can see only 3 lowest digits of the line number

EXPECTED RESULT

 The line number must be fully seen


SOFTWARE/OS VERSIONS
Operating System: Slackware 14.5
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.84.0
KDE Kmail version: 5.17.3 (21.04.3)
Qt Version: 5.15.2
Kernel Version: 5.12.17 (64-bit)
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 31.1 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2021-07-29 13:30:14 UTC
Git commit 71fb1356afc64bde878911cfb3c2e8258e0b91a5 by Laurent Montel.
Committed on 29/07/2021 at 13:29.
Pushed by mlaurent into branch 'release/21.08'.

Fix Bug 440041 - Sieve editor does not show the line numbers correctly
FIXED-IN: 5.18.0

M  +1    -1    src/ksieveui/editor/sievetextedit.cpp

https://invent.kde.org/pim/libksieve/commit/71fb1356afc64bde878911cfb3c2e8258e0b91a5