Fix Bug 440041 - Sieve editor does not show the line numbers correctly

BUG: 440041
FIXED-IN: 5.18.0